# browser-use-replit-api-webui-template

./: .env.example  .gitignore  .replit  JavaCodeUsage.py  README.md  api_test.py  chat_after_finish.py  check_browser.py  check_env.py  check_module.py  check_pw_params.py  create_impl.py  diagnose.py  fix_impl.py  fix_indentation.py  flash.py  flash2.py  flash3.py  flash4.py  flash5.py  flash6.py  flash7.py  list_impl_symbols.py  package-lock.json  package.json  pyproject.toml  replit.nix  start-app.sh  start.js  test_api.py  test_pw_patching.py  update_impl.py
.cursor/rules/: replit.mdc
api/: app.py  app.py.bak  auth.py  health_check_logic.py
attached_assets/: Pasted-Browser-Use-Browser-Use-Founder-mode-50-419-Cloud-17M-seed-round-to-build-the-Enable-AI-to-co-1743366506594.txt  Pasted-Files-Commands-git-api-app-py-attached-assets-client-server-shared-schema-ts-env-gitignore-check-1743424170964.txt  Pasted-Python-API-INFO-agent-Starting-task-Go-to-https-replit-com-and-tell-me-what-you-see-on--1743419878048.txt  Pasted-Skip-to-main-content-PyPI-Search-PyPI-Search-Help-Sponsors-Log-in-Register-browser-use-0-1-40-pip-in-1743366525564.txt
client/: index.html
client/src/: App.tsx
client/src/components/: codeblock.tsx  community-cta.tsx  comparison.tsx  demo-console.tsx  documentation.tsx  examples.tsx  features.tsx  footer.tsx  hero.tsx  icons.tsx  navbar.tsx  performance-chart.tsx  pricing.tsx
client/src/lib/: queryClient.ts  utils.ts
examples/: JavaCodeUsage.py  Simple.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+2 files in other folders)
