[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "langchain-openai>=0.3.1",
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
]
