[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md" # Good practice to add this

[tool.poetry.dependencies]
python = ">=3.11,<3.12.4"
playwright = ">=1.49.0"
browser-use = "0.1.40"
langchain-openai = "0.3.1"
langchain-google-genai = "^2.1.2"
flask = "^3.1.0"
flask-cors = "^5.0.1"
python-dotenv = "^1.1.0"
psutil = "^5.9.8" # Added for system resource monitoring

# Note: Removed 'poetry' itself as a dependency, it's the tool, not usually a library dependency.

[tool.poetry.group.dev.dependencies]
black = "^24.4.0" # Added for code formatting

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"] # Simplified requirement
build-backend = "poetry.core.masonry.api"